[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UserInterface/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Shop/Shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/buttons/RetryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/buttons/UI_Buttons.gd" type="Script" id=6]
[ext_resource path="res://src/UserInterface/buttons/ShopButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UserInterface/buttons/BackToMainMenuButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UserInterface/buttons/QuitButton.tscn" type="PackedScene" id=9]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Shop" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 4 )]
margin_top = 150.0
margin_bottom = 320.0
custom_colors/font_color_shadow = Color( 0, 0.6, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -87.0
margin_right = 273.0
margin_bottom = 196.0

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 536.0
margin_bottom = 66.0
script = ExtResource( 6 )

[node name="ShopButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 536.0
margin_bottom = 133.0
script = ExtResource( 6 )

[node name="BackToMainMenuButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 141.0
margin_right = 536.0
margin_bottom = 207.0
text = "Back to Main Screen"
script = ExtResource( 6 )

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 215.0
margin_right = 536.0
margin_bottom = 283.0
script = ExtResource( 6 )

[node name="ItemList" type="ItemList" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 735.396
margin_top = 1.39667
margin_right = 1023.39
margin_bottom = 344.397

[node name="Coins" type="Label" parent="ItemList"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -277.143
margin_top = -1.27771
margin_right = -128.143
margin_bottom = 29.7223
text = "Coins: "
valign = 1

[node name="Diamonds" type="Label" parent="ItemList"]
margin_left = 8.08606
margin_top = 24.9932
margin_right = 146.086
margin_bottom = 55.9932
text = "Diamonds:"

[node name="Animals" type="Label" parent="ItemList"]
margin_left = 11.0241
margin_top = 55.1319
margin_right = 123.024
margin_bottom = 86.1322
text = "Animals:"

[node name="TextureButton" type="TextureButton" parent="ItemList/Animals"]
margin_left = 1.47015
margin_top = -1.47021
margin_right = 120.47
margin_bottom = 38.5298

[node name="Animal_List" type="ItemList" parent="ItemList/Animals"]
visible = false
margin_left = 136.205
margin_top = 1.11926
margin_right = 268.205
margin_bottom = 283.119
max_columns = 16
[connection signal="pressed" from="PauseOverlay/PauseMenu/RetryButton" to="PauseOverlay/PauseMenu/RetryButton" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/ShopButton" to="PauseOverlay/PauseMenu/ShopButton" method="_on_ShopButton_pressed"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/BackToMainMenuButton" to="PauseOverlay/PauseMenu/BackToMainMenuButton" method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/QuitButton" to="PauseOverlay/PauseMenu/QuitButton" method="_on_QuitButton_pressed"]
[connection signal="button_up" from="ItemList/Animals/TextureButton" to="." method="_on_TextureButton_button_up"]
